--- a/package.json
+++ b/package.json
@@ -11,27 +11,37 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@material-tailwind/react": "^2.0.6",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.3.1",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "axios": "^1.5.0",
+    "bcrypt": "^5.1.1",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "flowbite": "^1.7.0",
     "flowbite-react": "^0.4.11",
     "next": "13.4.10",
+    "next-auth": "^4.23.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
+    "@types/bcrypt": "^5.0.0",
     "@types/react-slick": "^0.23.10",
     "autoprefixer": "^10.4.14",
     "daisyui": "^3.2.1",
     "postcss": "^8.4.26",
+    "prisma": "^5.3.1",
     "tailwindcss": "^3.3.3"
   }
 }
