--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@
 
 DATABASE_URL="mongodb+srv://Mass:Villorceau123@cluster0.aq3ph3d.mongodb.net/test"
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+GOOGLE_CLIENT_ID=44976363135-m8qgr6kr8q0n4f1l4gep0c2tnbpdpjhu.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
