--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-config-next": "13.4.10",
     "flowbite": "^1.7.0",
     "flowbite-react": "^0.4.11",
+    "moment": "^2.29.4",
     "next": "13.4.10",
     "next-auth": "^4.23.1",
     "react": "18.2.0",
