--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -24,6 +25,7 @@
     "@types/react-dom": "18.2.7",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "firebase": "^10.4.0",
@@ -31,11 +33,12 @@
     "flowbite-react": "^0.4.11",
     "micro": "^10.0.1",
     "moment": "^2.29.4",
-    "next": "13.4.10",
+    "next": "^13.5.5",
     "next-auth": "^4.23.1",
     "query-string": "^8.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.46.2",
     "react-hot-toast": "^2.4.1",
