--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "aos": "^2.3.4",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
-    "firebase": "^10.4.0",
+    "firebase": "^10.5.0",
     "flowbite": "^1.7.0",
     "flowbite-react": "^0.4.11",
     "micro": "^10.0.1",
