--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.0",
+    "encoding": "^0.1.13",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "firebase": "^10.5.0",
@@ -52,6 +53,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
+    "@types/aos": "^3.0.6",
     "@types/bcrypt": "^5.0.0",
     "@types/react-slick": "^0.23.10",
     "autoprefixer": "^10.4.14",
